<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"
            android:src="@drawable/ic_drink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toTopOf="@id/img">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                style="@style/item_text"
                android:layout_width="@dimen/_136sdp"
                android:layout_height="wrap_content"
                android:text="@string/tv_item_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/item_desc"
                android:layout_width="@dimen/_136sdp"
                android:layout_height="wrap_content"
                android:text="@string/tv_item_desc"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_end"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_alcohlic"
                style="@style/item_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_alcohol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:id="@+id/chk"
                android:theme="@style/RadioButtonTheme"
                app:layout_constraintEnd_toEndOf="@+id/tv_alcohlic"
                app:layout_constraintStart_toStartOf="@+id/tv_alcohlic"
                app:layout_constraintTop_toBottomOf="@+id/tv_alcohlic" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/img_fav"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:button="@drawable/item_fav"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toStartOf="@id/ly_end"
            app:layout_constraintTop_toTopOf="@id/img" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/radio_not_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>